--- a/randomQuoteMachine/style.css
+++ b/randomQuoteMachine/style.css
@@ -8,20 +8,20 @@ body {
 #quote-box {
   margin: auto;
   margin-top: 10%;
-  width: 450px;
+  width: 500px;
   padding: 30px 25px 60px 25px;
   background-color: white;
   border-radius: 20px
 }
 
 #text{
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
   padding-bottom: 10px;
 }
 
 #author{
-  font-size: 30px;
+  font-size: 20px;
   text-align: right;
 }
 
@@ -54,4 +54,10 @@ body {
 #credit{
   margin-top: 20px;
   text-align: center;
+}
+
+@media(max-width: 700px){
+   #quote-box{
+     width: 500px;
+   }
 }
