--- a/randomQuoteMachine/style.css
+++ b/randomQuoteMachine/style.css
@@ -11,7 +11,8 @@ body {
   width: 500px;
   padding: 30px 25px 60px 25px;
   background-color: white;
-  border-radius: 20px
+  border-radius: 20px;
+  position: relative;
 }
 
 #text{
@@ -30,7 +31,7 @@ body {
   color: blue;
   padding: 2px 10px;
   position: absolute;
-  left: 80px;
+  left: 30px;
   margin-top: 10px;
   margin-bottom: 20px;
 }
@@ -42,7 +43,7 @@ body {
   padding: 2px 10px;
   border-radius: 5px;
   position: absolute;
-  right: 80px;
+  right: 30px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
