--- a/randomQuoteMachine/style.css
+++ b/randomQuoteMachine/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
-  background-color: blue;
+  background-color: #f993b7;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -28,7 +28,7 @@ body {
 
 #tweet-quote{
   font-size: 40px;
-  color: blue;
+  color: #f993b7;
   padding: 2px 10px;
   position: absolute;
   left: 30px;
@@ -38,7 +38,7 @@ body {
 
 #new-quote{
   font-size: 15px;
-  background-color: blue;
+  background-color: #f993b7;
   color: white;
   padding: 2px 10px;
   border-radius: 5px;
