--- a/randomQuoteMachine/style.css
+++ b/randomQuoteMachine/style.css
@@ -9,7 +9,7 @@ body {
   margin: auto;
   margin-top: 10%;
   width: 500px;
-  padding: 30px 25px 60px 25px;
+  padding: 60px 25px 25px 25px;
   background-color: white;
   border-radius: 20px;
   position: relative;
@@ -29,11 +29,12 @@ body {
 #tweet-quote{
   font-size: 40px;
   color: #f993b7;
-  padding: 2px 10px;
+  padding: 2px 2px;
   position: absolute;
   left: 30px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  top: 10px;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 #new-quote{
@@ -44,7 +45,8 @@ body {
   border-radius: 5px;
   position: absolute;
   right: 30px;
-  margin-top: 20px;
+  top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
 }
 
